DD-869: fixed TOC flickering

--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -176,7 +176,7 @@
     font-family: monospace;
     font-size: 11px;
     height: calc(100% - 116px);
-    width: 100%;
+    width: calc(100% - 4px);
   }
 
   .done-btn-wrapper {
